--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
@@ -16,6 +16,6 @@ mod_id=arcana
 mod_name=Arcana
 mod_license=GPL 3.0
 mod_version=0.0.1
-mod_group_id=dev.zestyblaze.arcana
-mod_authors=ZestyBlaze
+mod_group_id=org.exodusstudio.arcana
+mod_authors=Exodus Studios Team
 mod_description=Filler text until we decide a description
