--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -5,10 +5,10 @@ issueTrackerURL="https://github.com/ZestyBlaze/Arcana-Continuation/issues"
 
 [[mods]]
 modId="arcana"
-version="${mod_version}"
-displayName="${mod_name}"
-updateJSONURL="https://raw.githubusercontent.com/ZestyBlaze/Arcana-Continuation/refs/heads/1.21.x/update.json"
-displayURL="https://github.com/ZestyBlaze/Arcana-Continuation"
+version = "${version}"
+displayName = "${mod_name}"
+updateJSONURL = "https://raw.githubusercontent.com/ZestyBlaze/Arcana-Continuation/refs/heads/1.21.x/update.json"
+displayURL = "https://github.com/ZestyBlaze/Arcana-Continuation"
 #logoFile="examplemod.png"
 #credits=""
 authors="${mod_authors}"
